--- a/src/main/resources/templates/account/index.html
+++ b/src/main/resources/templates/account/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <meta charset="utf-8">
@@ -16,11 +16,11 @@
 <div class="container my-5">
   <div class="row">
     <div class="col-md-6">
-      <div>
-        <h2>No Accounts yet!</h2>
+      <div th:if="${accountList.size()==0}">
+        <h2 >No Accounts yet!</h2>
       </div>
-      <div>
-        <h2 class="my-5">Accounts</h2>
+      <div th:unless="${accountList.size()==0}">
+        <h2 class="my-5" >Accounts</h2>
         <table class="table table-striped table-responsive-md">
           <thead>
           <tr>
