--- a/src/main/resources/templates/account/account-confirmation.html
+++ b/src/main/resources/templates/account/account-confirmation.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<h2 th:text="${account.userId}"></h2>
+<h2 th:text="${account.balance}"></h2>
+<h2 th:text="${account.accountType}"></h2>
 </body>
 </html>
